# ha-rinnai-touch

./: .gitignore  AGENT_SCOPE.md  LICENSE  NOTICE  README.md  hacs.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  field_validation_report.yml
custom_components/rinnai_touch/: __init__.py  binary_sensor.py  client.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  models.py  protocol.py  sensor.py  strings.json
custom_components/rinnai_touch/translations/: en.json
docs/: entity_model.md  networker_evidence.md  protocol_assumptions.md
docs/adr/: 0001-transport-source-boundary.md  0002-nbw2-passive-stale-session-recycle.md
docs/research/: community_brivis_networker_reverse_engineering_review.md  gate_e_dry_run_review_checklist.md  gate_e_session_maintenance_experiment_plan.md  gate_e_standalone_harness_design.md  nbw2_api_session_semantics_review.md  passive_semantic_mapping_plan.md  upstream_command_behaviour_review.md
docs/support/: log_collection.md  release_checklist.md
reference_data/: README.md
reference_data/notes/: jaron_system_profile.md
scripts/: rinnai_probe.py  sanitise_rinnai_capture.py
tests/: conftest.py  test_capture_fixtures.py  test_config_flow.py  test_coordinator.py  test_entities.py  test_frame_parser.py  test_init.py  test_project_structure.py  test_rinnai_probe.py  test_sanitise_rinnai_capture.py  test_status_model.py  test_tcp_client.py
tests/fixtures/: synthetic_multizone_status.json
